fix: build for java 8